// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab-web-platform shared/AutocompleteInput Disabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="w-full relative inline-block autocomplete-input"
        data-headlessui-state=""
      >
        <input
          aria-expanded="false"
          class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3 border-dark-tertiary bg-gray-3 cursor-not-allowed"
          data-headlessui-state=""
          id="headlessui-combobox-input-mock-id"
          role="combobox"
          type="text"
          value=""
        />
        <div
          class="absolute inset-y-0 right-0 flex flex-row"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="flex items-center px-2 focus:outline-none"
            data-headlessui-state=""
            id="headlessui-combobox-button-mock-id"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-4"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 8.25l-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full relative inline-block autocomplete-input"
      data-headlessui-state=""
    >
      <input
        aria-expanded="false"
        class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3 border-dark-tertiary bg-gray-3 cursor-not-allowed"
        data-headlessui-state=""
        id="headlessui-combobox-input-mock-id"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 right-0 flex flex-row"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="flex items-center px-2 focus:outline-none"
          data-headlessui-state=""
          id="headlessui-combobox-button-mock-id"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-4"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 8.25l-7.5 7.5-7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/AutocompleteInput Index 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="relative inline-block autocomplete-input"
        data-headlessui-state=""
      >
        <input
          aria-expanded="false"
          class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3"
          data-headlessui-state=""
          id="headlessui-combobox-input-mock-id"
          role="combobox"
          type="text"
          value=""
        />
        <div
          class="absolute inset-y-0 right-0 flex flex-row"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="flex items-center px-2 focus:outline-none"
            data-headlessui-state=""
            id="headlessui-combobox-button-mock-id"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-4"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 8.25l-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative inline-block autocomplete-input"
      data-headlessui-state=""
    >
      <input
        aria-expanded="false"
        class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3"
        data-headlessui-state=""
        id="headlessui-combobox-input-mock-id"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 right-0 flex flex-row"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="flex items-center px-2 focus:outline-none"
          data-headlessui-state=""
          id="headlessui-combobox-button-mock-id"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-4"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 8.25l-7.5 7.5-7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/AutocompleteInput Invalid 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="w-full relative inline-block autocomplete-input"
        data-headlessui-state=""
      >
        <input
          aria-expanded="false"
          class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-red-5 focus:border-red-5 hover:border-red-5"
          data-headlessui-state=""
          id="headlessui-combobox-input-mock-id"
          role="combobox"
          type="text"
          value=""
        />
        <div
          class="absolute inset-y-0 right-0 flex flex-row"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="flex items-center px-2 focus:outline-none"
            data-headlessui-state=""
            id="headlessui-combobox-button-mock-id"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-4"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 8.25l-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full relative inline-block autocomplete-input"
      data-headlessui-state=""
    >
      <input
        aria-expanded="false"
        class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-red-5 focus:border-red-5 hover:border-red-5"
        data-headlessui-state=""
        id="headlessui-combobox-input-mock-id"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 right-0 flex flex-row"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="flex items-center px-2 focus:outline-none"
          data-headlessui-state=""
          id="headlessui-combobox-button-mock-id"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-4"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 8.25l-7.5 7.5-7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/AutocompleteInput Multiple 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="w-full relative inline-block autocomplete-input"
        data-headlessui-state=""
      >
        <input
          aria-expanded="false"
          aria-multiselectable="true"
          class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3"
          data-headlessui-state=""
          id="headlessui-combobox-input-mock-id"
          readonly=""
          role="combobox"
          type="text"
          value=""
        />
        <div
          class="absolute inset-y-0 right-0 flex flex-row"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="flex items-center px-2 focus:outline-none"
            data-headlessui-state=""
            id="headlessui-combobox-button-mock-id"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-4"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 8.25l-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full relative inline-block autocomplete-input"
      data-headlessui-state=""
    >
      <input
        aria-expanded="false"
        aria-multiselectable="true"
        class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3"
        data-headlessui-state=""
        id="headlessui-combobox-input-mock-id"
        readonly=""
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 right-0 flex flex-row"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="flex items-center px-2 focus:outline-none"
          data-headlessui-state=""
          id="headlessui-combobox-button-mock-id"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-4"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 8.25l-7.5 7.5-7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/AutocompleteInput Read Only 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="w-full relative inline-block autocomplete-input"
        data-headlessui-state=""
      >
        <input
          aria-expanded="false"
          aria-readonly="true"
          class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-transparent border-gray-3"
          data-headlessui-state=""
          id="headlessui-combobox-input-mock-id"
          role="combobox"
          type="text"
          value=""
        />
        <div
          class="absolute inset-y-0 right-0 flex flex-row"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="flex items-center px-2 focus:outline-none"
            data-headlessui-state=""
            id="headlessui-combobox-button-mock-id"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-4"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 8.25l-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full relative inline-block autocomplete-input"
      data-headlessui-state=""
    >
      <input
        aria-expanded="false"
        aria-readonly="true"
        class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-transparent border-gray-3"
        data-headlessui-state=""
        id="headlessui-combobox-input-mock-id"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 right-0 flex flex-row"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="flex items-center px-2 focus:outline-none"
          data-headlessui-state=""
          id="headlessui-combobox-button-mock-id"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-4"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 8.25l-7.5 7.5-7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/AutocompleteInput Valid 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="w-full relative inline-block autocomplete-input"
        data-headlessui-state=""
      >
        <input
          aria-expanded="false"
          class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3 focus:border-primary-5"
          data-headlessui-state=""
          id="headlessui-combobox-input-mock-id"
          role="combobox"
          type="text"
          value=""
        />
        <div
          class="absolute inset-y-0 right-0 flex flex-row"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="flex items-center px-2 focus:outline-none"
            data-headlessui-state=""
            id="headlessui-combobox-button-mock-id"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-4"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 8.25l-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full relative inline-block autocomplete-input"
      data-headlessui-state=""
    >
      <input
        aria-expanded="false"
        class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3 focus:border-primary-5"
        data-headlessui-state=""
        id="headlessui-combobox-input-mock-id"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 right-0 flex flex-row"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="flex items-center px-2 focus:outline-none"
          data-headlessui-state=""
          id="headlessui-combobox-button-mock-id"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-4"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 8.25l-7.5 7.5-7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/AutocompleteInput With Full Width 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="w-full relative inline-block autocomplete-input"
        data-headlessui-state=""
      >
        <input
          aria-expanded="false"
          class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3"
          data-headlessui-state=""
          id="headlessui-combobox-input-mock-id"
          role="combobox"
          type="text"
          value=""
        />
        <div
          class="absolute inset-y-0 right-0 flex flex-row"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="flex items-center px-2 focus:outline-none"
            data-headlessui-state=""
            id="headlessui-combobox-button-mock-id"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-4"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 8.25l-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full relative inline-block autocomplete-input"
      data-headlessui-state=""
    >
      <input
        aria-expanded="false"
        class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3"
        data-headlessui-state=""
        id="headlessui-combobox-input-mock-id"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 right-0 flex flex-row"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="flex items-center px-2 focus:outline-none"
          data-headlessui-state=""
          id="headlessui-combobox-button-mock-id"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-4"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 8.25l-7.5 7.5-7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/AutocompleteInput With Title 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="relative inline-block autocomplete-input"
        data-headlessui-state=""
      >
        <input
          aria-expanded="false"
          class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3"
          data-headlessui-state=""
          id="headlessui-combobox-input-mock-id"
          role="combobox"
          title="Title"
          type="text"
          value=""
        />
        <div
          class="absolute inset-y-0 right-0 flex flex-row"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="flex items-center px-2 focus:outline-none"
            data-headlessui-state=""
            id="headlessui-combobox-button-mock-id"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-4"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 8.25l-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative inline-block autocomplete-input"
      data-headlessui-state=""
    >
      <input
        aria-expanded="false"
        class="border rounded-md p-2 placeholder-gray-5 shadow-sm w-full focus:outline-none caret-primary-5 border-gray-3"
        data-headlessui-state=""
        id="headlessui-combobox-input-mock-id"
        role="combobox"
        title="Title"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 right-0 flex flex-row"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="flex items-center px-2 focus:outline-none"
          data-headlessui-state=""
          id="headlessui-combobox-button-mock-id"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-4"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 8.25l-7.5 7.5-7.5-7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
